# MindVault

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.frontend  MindVault Agent - 项目设计文档 - v1.1.md  README.md  REFACTOR_PLAN.md  docker-compose.yml  findings.md  mindvaults Agent - 项目设计文档 - v1.1.md  nginx.conf  package-lock.json  package.json  progress.md  tailwind.config.js  task_plan.md  tsconfig.tsbuildinfo
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_deleted_at_to_documents.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: chat.py  chunks.py  documents.py  health.py  retrieval.py  router.py  stats.py
backend/app/core/: database.py  exceptions.py  middleware.py  redis.py
backend/app/models/: __init__.py  chunk.py  config.py  document.py  qa_record.py  session.py
backend/app/schemas/: chat.py  chunk.py  common.py  document.py  retrieval.py  stats.py
backend/app/services/: cache_service.py  chat_service.py  chunk_service.py  chunking_service.py  document_service.py  embedding_service.py  ingestion_service.py  llm_service.py  parser_service.py  retrieval_service.py  stats_service.py
backend/tests/: conftest.py  test_api_routes.py  test_chat_service.py  test_chunking_service.py  test_document_service.py  test_parser_service.py  test_retrieval_service.py
docs/: BRANDING_GUIDE.md  DEPLOYMENT_GUIDE.md  P1-design-doc.md  mindvaults - 项目设计文档 - v1.1.md
docs/planning/: 00-任务规划总览.md  01-任务拆分与分配.md  (+10 more)
(+38 files in other folders)
